# quickstart

./: agent.md  pyproject.toml
.haive/: allowed_dependencies.txt
quickstart/: __init__.py  agent.md  cli.py  config.py  preflight.py  runner.py  subprocess_runner.py
quickstart/steps/: __init__.py  agent.md  create_project.py  template_files.py  uv_init.py
quickstart/templates/: __init__.py  agent.md  basic.py
src/quickstart/: agent.md  paths.py
tests/: agent.md  test_cli.py  test_paths.py  test_planner.py  test_uv.py
