[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickstart"
version = "0.1.0"
description = "Quickstart CLI project"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
quickstart = "quickstart.cli:app"
